--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,4 @@
-/* body {
+body {
     margin: 0;
     padding: 0;
-} */
-
-nav > ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-    background: lightgray;
-    padding: .5em 1em;
-    margin: 0;
 }
